# Templator

./: .gitignore  Cargo.toml
src/: api.rs  cli.rs  cmd.rs  composite.rs  error.rs  github.rs  local.rs  main.rs  retriever.rs
src/cmd/: api.rs  help.rs  list.rs  new.rs
