[package]
name = "templator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.36.0"
serde = { version = "1.0.197", features = ["derive"] }
termion = "3.0.0"
tokio = "1.36.0"
toml = "0.8.12"
